# class_creator

./: CMakeLists.txt  LICENSE  README.md  config.h.in  version.rc.in
include/: class_creator.h  unix_os.h  windows_os.h
src/: class_creator.cpp  main.cpp  unix_os.cpp  windows_os.cpp
